--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Brezel.ai API to Staging
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, feature/fix-staging-pipeline]  # Added your feature branch
   pull_request:
     branches: [main, develop]
     types: [closed]
@@ -40,12 +40,12 @@ jobs:
         run: |
           go build -o brezel-api .
 
-  build-and-push:
-    name: Build and Push Docker Image
+  build-and-push-backend:
+    name: Build and Push Backend Docker Image
     needs: [test]
     runs-on: ubuntu-latest
     if: |
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && 
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/feature/fix-staging-pipeline') && 
       (github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true))
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
@@ -72,10 +72,10 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha,prefix=${{ github.ref_name }}-
-            type=raw,value=staging,enable=${{ github.ref == 'refs/heads/develop' }}
+            type=raw,value=staging,enable=${{ github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/feature/fix-staging-pipeline' }}
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
-      - name: Build and push Docker image
+      - name: Build and push Backend Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -94,33 +94,33 @@ jobs:
             GIT_COMMIT=${{ github.sha }}
             VERSION=${{ github.ref_name }}
 
-  build-frontend:
-    name: Build and Push Frontend Image
+  build-and-push-frontend:
+    name: Build and Push Frontend Docker Image
     needs: [test]
     runs-on: ubuntu-latest
     if: |
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && 
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/feature/fix-staging-pipeline') && 
       (github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true))
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Check if frontend exists
-        id: check-frontend
-        run: |
-          if [ -d "../scraper-webapp" ] || [ -d "../google-maps-scraper-webapp" ]; then
-            echo "frontend_exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "frontend_exists=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Checkout frontend repo
-        if: steps.check-frontend.outputs.frontend_exists == 'true'
+      - name: Checkout backend code
         uses: actions/checkout@v4
         with:
-          repository: yasseen-salama/google-maps-scraper-webapp  # Update with your frontend repo
-          path: frontend
-          token: ${{ secrets.GITHUB_TOKEN }}
+          path: backend
+
+      - name: Check if frontend repo exists
+        id: check-frontend
+        run: |
+          # Try to checkout the frontend repo
+          if git clone https://github.com/yasseen-salama/google-maps-scraper-webapp.git frontend 2>/dev/null; then
+            echo "frontend_exists=true" >> $GITHUB_OUTPUT
+            echo "✅ Frontend repository found"
+          elif git clone https://github.com/yasseen-salama/scraper-webapp.git frontend 2>/dev/null; then
+            echo "frontend_exists=true" >> $GITHUB_OUTPUT
+            echo "✅ Frontend repository found (alternative name)"
+          else
+            echo "frontend_exists=false" >> $GITHUB_OUTPUT
+            echo "⚠️ Frontend repository not found, skipping frontend build"
+          fi
 
       - name: Set up Docker Buildx
         if: steps.check-frontend.outputs.frontend_exists == 'true'
@@ -134,6 +134,20 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Create frontend environment file
+        if: steps.check-frontend.outputs.frontend_exists == 'true'
+        run: |
+          cd frontend
+          
+          # Create staging environment file
+          cat > .env.staging << EOF
+          NEXT_PUBLIC_API_URL=http://64.226.112.104:8080
+          NEXT_PUBLIC_ENVIRONMENT=staging
+          NODE_ENV=production
+          EOF
+          
+          echo "✅ Created frontend environment configuration"
+
       - name: Build and push Frontend Docker image
         if: steps.check-frontend.outputs.frontend_exists == 'true'
         uses: docker/build-push-action@v5
@@ -143,14 +157,26 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:staging
             ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:feature-${{ github.ref_name }}
+          cache-from: |
+            type=gha
+            type=registry,ref=${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:buildcache
+          cache-to: |
+            type=gha,mode=max
+            type=registry,ref=${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:buildcache,mode=max
           platforms: linux/amd64
+          build-args: |
+            BUILD_DATE=${{ github.event.head_commit.timestamp }}
+            GIT_COMMIT=${{ github.sha }}
+            VERSION=${{ github.ref_name }}
 
   deploy-staging:
     name: Deploy to Staging Environment
-    needs: [build-and-push, build-frontend]
-    if: always() && needs.build-and-push.result == 'success' && github.ref == 'refs/heads/develop'
+    needs: [build-and-push-backend, build-and-push-frontend]
+    if: |
+      always() && 
+      needs.build-and-push-backend.result == 'success' && 
+      (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/feature/fix-staging-pipeline')
     runs-on: ubuntu-latest
     environment:
       name: staging
@@ -165,12 +191,12 @@ jobs:
           host: ${{ secrets.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.STAGING_SSH_KEY }}
-          timeout: 30m
-          command_timeout: 30m
+          timeout: 15m
+          command_timeout: 15m
           script: |
             set -e
             
-            echo "Starting deployment to staging server"
+            echo "🚀 Starting deployment to staging server"
             echo "Time: $(date)"
             echo "User: $(whoami)"
             
@@ -180,32 +206,14 @@ jobs:
               exit 1
             }
             
-            # Pull latest code
-            echo "Pulling latest backend code from develop branch..."
+            # Pull latest configuration from feature branch
+            echo "📥 Pulling latest configuration..."
             git fetch origin
-            git checkout develop
-            git pull origin develop
-            
-            # Check for frontend (optional)
-            echo "Checking for frontend application..."
-            FRONTEND_DIR="../scraper-webapp"
-            if [ ! -d "$FRONTEND_DIR" ]; then
-              FRONTEND_DIR="../google-maps-scraper-webapp"
-            fi
-            
-            if [ -d "$FRONTEND_DIR" ]; then
-              echo "Found frontend at: $FRONTEND_DIR"
-              cd "$FRONTEND_DIR"
-              git fetch origin
-              git checkout develop || git checkout main
-              git pull
-              cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper
-            else
-              echo "Frontend directory not found, proceeding with backend only"
-            fi
+            git checkout feature/fix-staging-pipeline || git checkout develop
+            git pull origin feature/fix-staging-pipeline || git pull origin develop
             
             # Setup environment
-            echo "Configuring environment variables..."
+            echo "⚙️ Configuring environment variables..."
             if [ ! -f ".env" ]; then
               echo "No .env file found, creating from template..."
               cp .env.example .env
@@ -217,7 +225,7 @@ jobs:
             # Fix Docker networking for Linux
             sed -i 's/host\.docker\.internal/172.17.0.1/g' .env
             
-            # Update passwords from GitHub secrets
+            # Update secrets from GitHub
             if [ ! -z "${{ secrets.STAGING_POSTGRES_PASSWORD }}" ]; then
               echo "Updating database password..."
               sed -i "s/^POSTGRES_PASSWORD=.*/POSTGRES_PASSWORD=${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env
@@ -229,7 +237,7 @@ jobs:
               sed -i "s/^CLERK_API_KEY=.*/CLERK_API_KEY=${{ secrets.STAGING_CLERK_API_KEY }}/" .env
             fi
             
-            # Set concurrency for single-core servers
+            # Optimize for single-core server
             CPU_CORES=$(nproc)
             echo "Server has $CPU_CORES CPU cores"
             if [ $CPU_CORES -eq 1 ]; then
@@ -242,88 +250,102 @@ jobs:
             fi
             
             # Login to GitHub Container Registry
-            echo "Logging in to GitHub Container Registry..."
+            echo "🔐 Logging in to GitHub Container Registry..."
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             
-            # Pull the pre-built images
-            echo "Pulling pre-built Docker images..."
-            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:staging || {
-              echo "ERROR: Failed to pull backend staging image"
-              exit 1
-            }
-            
-            # Pull frontend image if it exists
-            if [ -d "$FRONTEND_DIR" ]; then
-              echo "Pulling frontend image..."
-              docker pull ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:staging || {
-                echo "WARNING: Failed to pull frontend image, will build locally"
-                docker build -t gmaps-webapp-staging "$FRONTEND_DIR"
-              }
-            fi
-            
             # Stop existing containers
-            echo "Stopping current containers..."
+            echo "🛑 Stopping current containers..."
             docker compose -f docker-compose.staging.yaml down --remove-orphans || true
             
             # Clean up to save space
-            echo "Cleaning up old images..."
+            echo "🧹 Cleaning up old images..."
             docker image prune -f || true
             
-            # Start containers with the new images
-            echo "Starting services with docker-compose..."
+            # Pull pre-built backend image (CRITICAL: No local building)
+            echo "📦 Pulling pre-built backend image..."
+            docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:staging || {
+              echo "❌ ERROR: Failed to pull backend staging image"
+              exit 1
+            }
+            
+            # Pull pre-built frontend image
+            echo "📦 Pulling pre-built frontend image..."
+            FRONTEND_AVAILABLE=false
+            if docker pull ${{ env.REGISTRY }}/yasseen-salama/google-maps-scraper-webapp:staging 2>/dev/null; then
+              echo "✅ Frontend image pulled successfully"
+              FRONTEND_AVAILABLE=true
+            else
+              echo "⚠️ Frontend image not available, deploying backend only"
+              # Remove frontend from docker-compose temporarily
+              cp docker-compose.staging.yaml docker-compose.staging.yaml.backup
+              sed -i '/frontend:/,/^$/d' docker-compose.staging.yaml
+            fi
+            
+            # Start containers with pre-built images
+            echo "🚀 Starting services with docker-compose..."
             docker compose -f docker-compose.staging.yaml --env-file .env up -d
             
-            # Wait for startup
-            echo "Waiting for services to initialize..."
-            sleep 15
+            # Wait for startup (longer timeout for single-core server)
+            echo "⏳ Waiting for services to initialize..."
+            sleep 30
             
-            # Health check
-            echo "Checking backend health status..."
+            # Health check with more attempts for slower server
+            echo "🏥 Checking backend health status..."
             HEALTH_CHECK_URL="http://localhost:8080/health"
-            MAX_ATTEMPTS=30
+            MAX_ATTEMPTS=60
             
             for i in $(seq 1 $MAX_ATTEMPTS); do
               if curl -s -f $HEALTH_CHECK_URL > /dev/null 2>&1; then
-                echo "Backend is running and healthy"
+                echo "✅ Backend is running and healthy!"
                 echo ""
-                echo "Deployment completed successfully"
-                echo "Backend API: http://64.226.112.104:8080"
-                echo "Health endpoint: http://64.226.112.104:8080/health"
-                echo "API documentation: http://64.226.112.104:8080/api/docs"
-                if [ -d "$FRONTEND_DIR" ]; then
-                  echo "Frontend application: http://64.226.112.104:3000"
+                echo "🎉 Deployment completed successfully"
+                echo "🔗 Backend API: http://64.226.112.104:8080"
+                echo "🔗 Health endpoint: http://64.226.112.104:8080/health"
+                echo "🔗 API documentation: http://64.226.112.104:8080/api/docs"
+                
+                if [ "$FRONTEND_AVAILABLE" = true ]; then
+                  echo "🔗 Frontend application: http://64.226.112.104:3000"
+                else
+                  echo "⚠️  Frontend: Not deployed (image not available)"
                 fi
+                
                 echo ""
-                echo "Running containers:"
-                docker ps | grep -E "(brezel|gmaps)" || true
+                echo "📋 Running containers:"
+                docker ps --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
+                echo ""
+                echo "💾 System resources:"
+                echo "Memory: $(free -h | awk '/^Mem:/ {print $3 "/" $2}')"
+                echo "Disk: $(df -h / | awk 'NR==2 {print $3 "/" $2 " (" $5 " used)"}')"
                 exit 0
               else
                 echo "Health check attempt $i of $MAX_ATTEMPTS - Backend not ready yet"
                 if [ $i -eq $MAX_ATTEMPTS ]; then
-                  echo "ERROR: Backend failed to start after $MAX_ATTEMPTS attempts"
+                  echo "❌ ERROR: Backend failed to start after $MAX_ATTEMPTS attempts"
                   echo ""
-                  echo "Container logs:"
-                  docker compose -f docker-compose.staging.yaml logs --tail 100
+                  echo "🔍 Container status:"
+                  docker ps -a
+                  echo ""
+                  echo "📋 Container logs:"
+                  docker compose -f docker-compose.staging.yaml logs --tail 50
                   exit 1
                 fi
-                sleep 3
+                sleep 5
               fi
             done
 
       - name: Run smoke tests
         if: success()
         run: |
-          sleep 5
-          echo "Running basic API tests..."
+          echo "🧪 Running smoke tests..."
           
           # Test health endpoint
           echo "Testing health endpoint..."
           curl -f -s http://64.226.112.104:8080/health || {
-            echo "Health check failed"
+            echo "❌ Health check failed"
             exit 1
           }
           
-          echo "All tests passed successfully"
+          echo "✅ All tests passed successfully"
 
       - name: Notify deployment status
         if: always()
@@ -332,8 +354,8 @@ jobs:
           script: |
             const status = '${{ job.status }}';
             const message = status === 'success' 
-              ? 'Successfully deployed to staging environment' 
-              : 'Deployment to staging failed';
+              ? '✅ Successfully deployed to staging environment' 
+              : '❌ Deployment to staging failed';
             
             github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
