--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -43,6 +43,9 @@ services:
       - NEXT_PUBLIC_API_URL=http://64.226.112.104:8080
       - NEXT_PUBLIC_ENVIRONMENT=staging
       - NODE_ENV=production
+      # ✅ Added Clerk environment variables
+      - CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
+      - NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
     restart: unless-stopped
     networks:
       - gmaps
